tests/ui/nightly/fail-wrong-yield-type-empty.rs
#![feature(generators)]

#[fauxgen::generator(yield = i32)]
fn gen() {
    yield;
}

fn main() {}
